<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_marginLeft="11dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/three"
        android:layout_marginTop="164dp"
        android:text="@string/nine"
        android:layout_alignLeft="@+id/three" />

    <Button
        android:id="@+id/eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/nine"
        android:layout_toStartOf="@+id/seven"
        android:text="@string/eight"
        android:layout_toLeftOf="@+id/seven" />

    <Button
        android:id="@+id/seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/nine"
        android:layout_marginEnd="91dp"
        android:text="@string/seven"
        android:layout_alignParentRight="true"
        android:layout_marginRight="91dp" />

    <Button
        android:id="@+id/six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/nine"
        android:layout_below="@+id/nine"
        android:text="@string/six"
        android:layout_alignLeft="@+id/nine" />

    <Button
        android:id="@+id/five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nine"
        android:layout_toStartOf="@+id/seven"
        android:text="@string/five"
        android:layout_toLeftOf="@+id/seven" />

    <Button
        android:id="@+id/four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/seven"
        android:layout_below="@+id/nine"
        android:text="@string/four"
        android:layout_alignLeft="@+id/seven" />

    <Button
        android:id="@+id/three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/six"
        android:layout_toStartOf="@+id/eight"
        android:text="@string/three"
        android:layout_toLeftOf="@+id/eight" />

    <Button
        android:id="@+id/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/eight"
        android:layout_below="@+id/six"
        android:text="@string/two"
        android:layout_alignLeft="@+id/eight" />

    <Button
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/seven"
        android:layout_below="@+id/six"
        android:text="@string/one"
        android:layout_alignLeft="@+id/seven" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/nine"
        android:layout_below="@+id/three"
        android:text="@string/clear"
        android:layout_alignLeft="@+id/nine" />

    <Button
        android:id="@+id/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/three"
        android:layout_toEndOf="@+id/nine"
        android:text="@string/zero"
        android:layout_toRightOf="@+id/nine" />

    <Button
        android:id="@+id/eql"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/clear"
        android:layout_toEndOf="@+id/eight"
        android:text="@string/eql"
        android:layout_toRightOf="@+id/eight" />

    <Button
        android:id="@+id/div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/nine"
        android:text="@string/div"
        android:layout_alignParentRight="true" />

    <Button
        android:id="@+id/mul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/six"
        android:layout_alignParentEnd="true"
        android:text="@string/mul"
        android:layout_alignParentRight="true" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/six"
        android:text="@string/add"
        android:layout_alignParentRight="true" />

    <Button
        android:id="@+id/sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/three"
        android:text="@string/sub"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="134dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/txt1"
        android:layout_marginTop="90dp"
        android:layout_alignLeft="@+id/txt1" />

</RelativeLayout>